assignment2/manifest-files/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    role: frontend
    env: demo
spec:
  replicas: 1
  
  selector:
    matchLabels:
      role: frontend
  
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: gnvsai2020/voteapp-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
