assignment2/manifest-files/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 8080
  selector:
    role: api
