assignment2/manifest-files/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    role: frontend
    env: demo
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30009
  selector:
    role: frontend
