assignment2/manifest-files/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
 rules:
 - host: api.192.168.49.2.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: api
         servicePort: 8080
